Branch ver 0.2.3 - Fixed element spacing layout overlap on the GUI

--- a/public/index.css
+++ b/public/index.css
@@ -6,21 +6,26 @@ html, body{
 
 /* Banner Styles */
 .banner {
-  background: linear-gradient(90deg, #4caf50, #81c784);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(90deg, #FFC5D3, #fabccb);
   color: white;
-  text-align: center;
-  padding:  20px;
+  padding:  20px 40px;
+  height: 100px;
+  box-sizing: border-box;
 }
 
 .banner_content {
+  font-size: 1.8rem;
   max-width: 800px;
   margin: 0 auto;
 }
 
 .banner h1 {
-  align-items: left;
-  font-size: 3rem;
+  font-size: 1.8rem;
   margin: 0;
+  text-align: start;
 }
 
 .banner p {
@@ -73,7 +78,6 @@ transition: background-color 0.3s ease, color 0.3s ease;
 /* Sidebar Styling */
 .sidebar {
   margin: 0;
-  padding 0;
   width: 200px;
   background-color: #f1f1f1;
   position: fixed;
@@ -90,7 +94,7 @@ transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .sidebar a.active {
-  background-color: #04AA6D;
+  background-color: #C11C84;
   color: white;
 }
 
@@ -104,14 +108,18 @@ transition: background-color 0.3s ease, color 0.3s ease;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
-    margin-left: 20px;
+    margin-left: 220px;
+    margin-top: 20px;
     padding: 20px;
+    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .listing_card{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  border-radius: 5px
+  border-radius: 5px;
+  padding: 10px
 }
 
 .listing_card:hover {
